Fixed accordions for users without JavaScript

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
@@ -23,7 +23,7 @@
                         </h4>
                     </div>
                     <div id="payment_{{ p.provider.identifier }}"
-                         class="panel-collapse collapse {% if selected == p.provider.identifier %}in{% endif %}">
+                         class="panel-collapse collapsed {% if selected == p.provider.identifier %}in{% endif %}">
                         <div class="panel-body form-horizontal">
                             {{ p.form }}
                         </div>
