--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -22,7 +22,7 @@
                         </h4>
                     </div>
                     <div id="cp{{ form.pos.identity }}"
-                            class="panel-collapse collapse {% if forloop.counter0 == 0 %}in{% endif %}">
+                            class="panel-collapse collapsed {% if forloop.counter0 == 0 %}in{% endif %}">
                         <div class="panel-body">
                             {% bootstrap_form form layout="horizontal" %}
                         </div>
