Changed some texts

--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -57,7 +57,7 @@
                 <div class="pull-right">
                     <a href="{% url "presale:event.order.modify" organizer=request.event.organizer.slug event=request.event.slug order=order.code %}">
                         <span class="fa fa-edit"></span>
-                        {% trans "Change answers" %}
+                        {% trans "Change details" %}
                     </a>
                 </div>
             {% endif %}
