--- a/src/pretix/presale/static/pretixpresale/less/main.less
+++ b/src/pretix/presale/static/pretixpresale/less/main.less
@@ -2,6 +2,8 @@
 @import "../../fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
 
+@brand-primary: #3b1c4a;
+
 @import "event.less";
 @import "forms.less";
 
