--- a/src/pretix/control/static/pretixcontrol/less/variables.less
+++ b/src/pretix/control/static/pretixcontrol/less/variables.less
@@ -4,8 +4,13 @@
 @gray-light: lighten(#000, 60%);
 @gray-lighter: lighten(#000, 93.5%);
 @gray-lightest: lighten(#000, 97.25%);
-@brand-primary: #428bca;
+@brand-primary: #3b1c4a;
 @brand-success: #5cb85c;
 @brand-info: #5bc0de;
 @brand-warning: #f0ad4e;
 @brand-danger: #d9534f;
+@navbar-inverse-bg: #3b1c4a;
+@navbar-inverse-link-color: white;
+@navbar-inverse-link-hover-color: @gray-lighter;
+@navbar-inverse-brand-hover-color: @gray-lighter;
+@navbar-inverse-color: white;
