--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -21,7 +21,7 @@
     <div class="page-header">
         <h1 class="pull-left">
             {{ event.name }}
-            <small>{{ event.date_from|date }}{% if event.settings.show_date_to %} – {{ event.date_to|date }}{% endif %}</small>
+            <small>{{ event.date_from|date:"DATE_FORMAT" }}{% if event.settings.show_date_to %} – {{ event.date_to|date:"DATE_FORMAT" }}{% endif %}</small>
         </h1>
         <div class="pull-right loginbox">
             {% if request.event.settings.locales|length > 1 %}
