--- a/src/pretix/control/static/pretixcontrol/less/variables.less
+++ b/src/pretix/control/static/pretixcontrol/less/variables.less
@@ -4,7 +4,7 @@
 @gray-light: lighten(#000, 60%);
 @gray-lighter: lighten(#000, 93.5%);
 @gray-lightest: lighten(#000, 97.25%);
-@brand-primary: #3b1c4a;
+@brand-primary: #8E44B3;
 @brand-success: #5cb85c;
 @brand-info: #5bc0de;
 @brand-warning: #f0ad4e;
