--- a/src/pretix/presale/static/pretixpresale/less/main.less
+++ b/src/pretix/presale/static/pretixpresale/less/main.less
@@ -2,7 +2,7 @@
 @import "../../fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
 
-@brand-primary: #3b1c4a;
+@brand-primary: #8E44B3;
 
 @import "event.less";
 @import "forms.less";
