Fixed "Back" buttons in checkout process

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
@@ -34,7 +34,7 @@
         <div class="row checkout-button-row">
             <div class="col-md-4">
                 <a class="btn btn-block btn-default btn-lg"
-                        href="{{ view.get_questions_url }}">
+                        href="{{ view.get_previous_url }}">
                     {% trans "Go back" %}
                 </a>
             </div>
