--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -17,10 +17,15 @@
                 </h3>
             </div>
             <div class="panel-body">
+                {% if can_retry %}
+                    <a href="{% url "presale:event.order.pay" organizer=request.event.organizer.slug event=request.event.slug order=order.code %}"
+                       class="btn btn-primary pull-right"><i class="fa fa-money"></i> {% trans "Complete payment" %}</a>
+                {% endif %}
                 {{ payment }}
                 <strong>{% blocktrans trimmed with date=order.expires|date:"SHORT_DATE_FORMAT" %}
                     Please complete your payment before {{ date }}
                 {% endblocktrans %}</strong>
+                <div class="clearfix"></div>
             </div>
         </div>
     {% endif %}
