Added a settings change view for users in the frontend

--- a/src/pretix/presale/static/pretixpresale/less/main.less
+++ b/src/pretix/presale/static/pretixpresale/less/main.less
@@ -35,3 +35,10 @@ footer {
         vertical-align: baseline;
     }
 }
+.huge {
+    font-size: 40px;
+}
+a:hover .panel-primary > .panel-heading {
+    background-color: darken(@btn-primary-bg, 10%);
+    border-color: darken(@btn-primary-border, 12%);
+}
