--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -20,7 +20,7 @@
 <div class="container event">
     <div class="page-header">
         <h1 class="pull-left">
-            {{ event.name }}
+            <a href="{% url "presale:event.index" event=event.slug organizer=event.organizer.slug %}">{{ event.name }}</a>
             <small>{{ event.date_from|date:"DATE_FORMAT" }}{% if event.settings.show_date_to %} – {{ event.date_to|date:"DATE_FORMAT" }}{% endif %}</small>
         </h1>
         <div class="pull-right loginbox">
@@ -39,8 +39,8 @@
                 {% blocktrans trimmed with name=request.user.get_short_name %}
                     Hello, {{ name }}!
                 {% endblocktrans %} &middot;
-                <a href="{% url "presale:event.orders" event=request.event.slug organizer=request.event.organizer.slug %}">
-                    {% trans "My orders" %}</a> &middot;
+                <a href="{% url "presale:event.account" event=request.event.slug organizer=request.event.organizer.slug %}">
+                    {% trans "Your account" %}</a> &middot;
                 <a href="{% url "presale:event.logout" event=request.event.slug organizer=request.event.organizer.slug %}">
                     {% trans "Logout" %}</a>
             {% else %}
