--- a/src/pretix/presale/templates/pretixpresale/event/order_pay.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_pay.html
@@ -1,6 +1,6 @@
 {% extends "pretixpresale/event/base.html" %}
 {% load i18n %}
-{% block title %}{% trans "Cancel order" %}{% endblock %}
+{% block title %}{% trans "Pay order" %}{% endblock %}
 {% block content %}
     <h2>
         {% blocktrans trimmed with code=order.code %}
