--- a/src/pretix/presale/templates/pretixpresale/event/account_settings.html
+++ b/src/pretix/presale/templates/pretixpresale/event/account_settings.html
@@ -23,7 +23,7 @@
         </fieldset>
         <div class="row checkout-button-row">
             <div class="col-md-4 col-md-offset-8">
-                <button class="btn btn-block btn-primary btn-lg" type="submit">
+                <button class="btn btn-block btn-primary btn-lg btn-save" type="submit">
                     {% trans "Save" %}
                 </button>
             </div>
