Fixed a JavaScript syntax error

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -60,7 +60,7 @@
                             <div class="item-with-variations">
                                 <div class="row-fluid product-row headline">
                                     <div class="col-md-8 col-xs-12">
-                                        <a href="javascript:void();" data-toggle="variations">
+                                        <a href="javascript:void(0);" data-toggle="variations">
                                             <strong>{{ item.name }}</strong>
                                         </a>
                                         {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
@@ -75,7 +75,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 availability-box">
-                                        <a href="javascript:void();" data-toggle="variations" class="js-only">
+                                        <a href="javascript:void(0);" data-toggle="variations" class="js-only">
                                             {% trans "Show variants" %}
                                         </a>
                                     </div>
